# douyin-downloader-1

./: README.md  config.example.yml  pyproject.toml
cli/: main.py
config/: default_config.py
core/: __init__.py  analysis_manager.py  archive_manager.py  downloader_base.py  pipeline.py  transcript_formatter.py  transcript_manager.py  url_parser.py
core/transcript_providers/: __init__.py  base.py  local_whisper_provider.py  openai_provider.py
storage/: database.py
tests/: test_analysis_manager.py  test_archive_manager.py  test_archive_record_db.py  test_pipeline.py  test_transcript_formatter.py  test_transcript_manager.py  test_transcript_providers.py  test_url_parser_local.py
