[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "douyin-downloader"
version = "2.0.0"
description = "Douyin batch downloader with no-watermark support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.19.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "gmssl>=3.2.2",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
transcribe = [
    "openai-whisper>=20231117",
]
transcribe-mlx = [
    "mlx-whisper>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
]
all = [
    "douyin-downloader[browser,transcribe,transcribe-mlx,dev]",
]

[project.scripts]
douyin-dl = "cli.main:main"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "auth*", "config*", "control*", "storage*", "utils*", "tools*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
